# Plexus

./: .gitignore  Cargo.toml  DECISIONS.md  HANDOFF.md  LICENSE  README.md  SYSTEM_PROMPT.md  refresh-notebooklm.sh
.github/workflows/: ci.yml
Plexus-Frontend-Draft/: Plexus Frontend.html
Plexus-Frontend-Draft/src/: admin.jsx  app.jsx  channels.jsx  chat.jsx  cron.jsx  data.jsx  devices.jsx  icons.jsx  sessions.jsx  shared.jsx  workspaces.jsx
docs/: API.yaml  DECISIONS.md  PROTOCOL.md  SCHEMA.md  SYSTEM_PROMPT.md  TOOLS.md
docs/audit/: 2026-04-20-inventory.md
docs/reference/: README.md  current-plexus-audit.md
docs/superpowers/plans/: 2026-04-08-m1-common-client-plan.md  2026-04-09-m2a-foundation.md  2026-04-09-m2b-agent-core.md  2026-04-09-m2cd-channels-mcp.md  2026-04-10-m3-gateway-frontend.md  2026-04-10-plexus-gateway.md  2026-04-11-m3b-frontend.md  2026-04-13-cron-nanobot-parity.md  2026-04-15-inbound-media.md  2026-04-16-account-deletion.md  2026-04-16-cross-channel-addressing.md  2026-04-17-dream-subsystem.md  2026-04-17-shared-evaluator-cron-integration.md  2026-04-17-workspace-foundation.md  2026-04-18-heartbeat-subsystem.md  2026-04-18-workspace-frontend.md  2026-04-19-cleanup-pass.md  2026-04-28-plexus-m0-plan1-foundation-protocol.md  2026-04-28-plexus-m0-plan2-tools.md  2026-04-28-plexus-m0-plan3-mcp-and-polish.md  2026-05-12-plexus-m1a-server-foundation.md  2026-05-12-plexus-m1b-llm-provider-foundation.md  2026-05-14-plexus-m1c-browser-chat-path.md  2026-05-18-plexus-m1d-workspace-files-attachments.md  2026-05-21-plexus-m1e-device-connectivity.md
docs/superpowers/specs/: 2026-04-08-m1-common-client-design.md  2026-04-09-m2-server-design.md  2026-04-10-m3-gateway-frontend-design.md  2026-04-15-inbound-media-design.md  2026-04-17-m2-closeout-design.md  2026-04-17-workspace-and-autonomy-design.md  2026-04-19-cleanup-pass-design.md  2026-04-28-plexus-m0-design.md  2026-05-12-plexus-m1-living-design.md  2026-05-12-plexus-m1a-server-foundation-design.md  2026-05-12-plexus-m1b-llm-provider-foundation-design.md  2026-05-14-plexus-m1c-browser-chat-path-design.md  (+2 more)
plexus-client/: .env.example  Cargo.toml  README.md
plexus-client/docs/: DECISIONS.md  DEPLOYMENT.md  ISSUE.md  SECURITY.md  TOOLS.md
plexus-client/src/: config.rs  connection.rs  env.rs  guardrails.rs  heartbeat.rs  main.rs  read_stream.rs  sandbox.rs  tool_schemas.rs
plexus-client/src/mcp/: client.rs  mod.rs
plexus-client/src/tools/: edit_file.rs  glob.rs  grep.rs  helpers.rs  list_dir.rs  mod.rs  read_file.rs  shell.rs  write_file.rs
plexus-common/: Cargo.toml  README.md
plexus-common/src/: consts.rs  error.rs  fuzzy_match.rs  lib.rs  mcp_utils.rs  mime.rs  network.rs  protocol.rs  secrets.rs  version.rs
plexus-common/src/errors/: auth.rs  mcp.rs  mod.rs  network.rs  protocol.rs  tool.rs  workspace.rs
plexus-common/src/mcp/: filter.rs  lifecycle.rs  mod.rs  naming.rs  session.rs  wrap.rs
plexus-common/src/protocol/: frames.rs  mod.rs  transfer.rs  types.rs
plexus-common/src/tool_schemas/: file_ops.rs  mod.rs
plexus-common/src/tools/: format.rs  mod.rs  path.rs  result.rs  schemas.rs  validate.rs
plexus-common/tests/: end_to_end_schema_pipeline.rs  mcp_lifecycle.rs  secret_no_leak.rs
plexus-common/tests/fixtures/fake-mcp/: main.rs
plexus-frontend/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
plexus-frontend/docs/: DECISIONS.md  DEPLOYMENT.md  ISSUE.md
plexus-frontend/src/: App.tsx
plexus-gateway/: .env.example  Cargo.toml  README.md  build.rs
plexus-gateway/docs/: DECISIONS.md  DEPLOYMENT.md  ISSUE.md  PROTOCOL.md
plexus-gateway/src/: config.rs  jwt.rs  lib.rs  main.rs  proxy.rs  routing.rs  state.rs  static_files.rs
plexus-gateway/src/ws/: chat.rs  mod.rs  plexus.rs
plexus-gateway/tests/: integration.rs
plexus-server/: .env.example  Cargo.toml  README.md
plexus-server/docs/: API.md  DECISIONS.md  DEPLOYMENT.md  ISSUE.md  SCHEMA.md  SECURITY.md
plexus-server/scripts/: reset-db.sh
plexus-server/src/: account.rs  agent_loop.rs  api.rs  app.rs  bus.rs  config.rs  consts.rs  context.rs  cron.rs  device_stream.rs  dream.rs  error.rs  evaluator.rs  file_store.rs  heartbeat.rs  lib.rs  main.rs  memory.rs  openai.rs  server_mcp.rs  session.rs  skills_cache.rs  state.rs  tools_registry.rs  ws.rs
plexus-server/src/auth/: admin.rs  cron_api.rs  device.rs  discord_api.rs  jwt.rs  mod.rs  password.rs  skills_api.rs  telegram_api.rs
plexus-server/src/channels/: discord.rs  gateway.rs  mod.rs  telegram.rs
plexus-server/src/chat/: attachments.rs  content.rs  mod.rs  prompt.rs  sse.rs  worker.rs
plexus-server/src/db/: cron.rs  devices.rs  discord.rs  messages.rs  mod.rs  pending_messages.rs  schema.sql  sessions.rs  skills.rs  system_config.rs  telegram.rs  users.rs
plexus-server/src/devices/: mod.rs  registry.rs  ws.rs
plexus-server/src/mcp/: wrap.rs
plexus-server/src/providers/: openai.rs
plexus-server/src/routes/: admin.rs  auth.rs  devices.rs  me.rs  mod.rs  sessions.rs  validation.rs  workspace.rs
plexus-server/src/server_tools/: cron_tool.rs  dispatch.rs  file_ops.rs  file_ops_schemas.rs  file_transfer.rs  memory.rs  message.rs  mod.rs  shell_schema.rs  skills.rs  web_fetch.rs
plexus-server/src/tools/: file_ops.rs  mod.rs  registry.rs
plexus-server/src/workspace/: fs.rs  mod.rs  paths.rs  quota.rs  registration.rs  tree.rs
plexus-server/templates/prompts/: dream_phase1.md  dream_phase2.md  heartbeat_phase1.md
plexus-server/templates/skills/create_skill/: SKILL.md
plexus-server/templates/workspace/: HEARTBEAT.md  MEMORY.md  SOUL.md
plexus-server/tests/: m1a_admin_config.rs  m1a_auth.rs  m1a_bootstrap.rs  m1b_admin_config.rs  m1b_openai_client.rs  m1c_messages.rs  m1c_sessions.rs  m1c_sse.rs  m1c_worker.rs  m1d_message_contract.rs  m1d_tools.rs  m1d_workspace_fs.rs  m1d_workspace_rest.rs  m1e_device_ws.rs  m1e_devices_rest.rs
plexus-server/tests/support/: device_client.rs  fake_openai.rs  mod.rs
reference/: old-schema.md
scripts/: m1c-smoke.py  reset-postgres18-and-test.sh
(+24 files in other folders)
