[package]
name = "plexus-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
plexus-common = { path = "../plexus-common" }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
regex = "1"
ipnet = "2"
tokio-util = "0.7"
rmcp = { version = "1.3", features = ["client", "transport-child-process"] }
dotenvy = "0.15"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util", "macros"] }

[lints.rust]
unsafe_code = "forbid"
