[package]
name = "plexus-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
plexus-common = { path = "../plexus-common", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["cors", "limit"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-none", "postgres", "chrono", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
jsonwebtoken = "9"
bcrypt = "0.17"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
regex = "1"
ipnet = "2"
base64 = "0.22"
cron = "0.15"
chrono-tz = "0.10"
dotenvy = "0.15"
rmcp = { version = "1.3", features = ["client", "transport-child-process"] }
serenity = { version = "0.12", features = ["client", "gateway", "model", "cache"] }
teloxide = { version = "0.13", features = ["macros"] }
globset = "0.4"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[lints.rust]
unsafe_code = "forbid"
