[package]
name = "plexus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
plexus-common = { path = "../plexus-common" }
axum.workspace = true
async-stream.workspace = true
cookie.workspace = true
reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
sha2.workspace = true
regex.workspace = true
globset.workspace = true
thiserror.workspace = true
uuid.workspace = true
secrecy.workspace = true
sqlx.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
rand_core.workspace = true
time.workspace = true

[dev-dependencies]
tower.workspace = true
http-body-util.workspace = true
url.workspace = true
tempfile.workspace = true
